--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple Pong Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Students are not able to login into git</h1>
-    <h1>Students are </h1>
-    
+    <h1>Simple Pong Game</h1>
+    <div id="game-container">
+        <canvas id="pong-canvas" width="800" height="500"></canvas>
+    </div>
+    <script src="game.js"></script>
 </body>
 </html>
